# slsim

./: .gitignore  CMakeLists.txt  README.md
data/: config.yaml  obstacle.txt
data/gend/: ground_pts_in_cam.txt  ground_pts_in_image.txt  ground_pts_in_world.txt  meta.txt  obstacle_pts_in_cam.txt  obstacle_pts_in_image.txt
python/: drawer.py  models_for_drawer.py  test.py
src/: utils.cpp  utils.h
src/main/: data_gen.cpp  obstacle_gen.cpp
